--- a/index.html
+++ b/index.html
@@ -14,16 +14,84 @@
 
 <body>
     <section class="first-section">
-        <div class="half-width">
+        <div class="first-half-width">
             <h1><span class="orange-color">Skip</span> The Diet,<br> Just Eat Healthy <br> With Food Network</h1>
             <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
 
-            <a class="order-food-link" target="_blank"
+            <a class="link-button" target="_blank"
                 href="https://www.linkedin.com/in/shariful-islam-kajal-801945189/">Order Food</a>
 
         </div>
-        <div class="half-width">
+        <div class="first-half-width">
             <img src="images/male/male-edit1.png" alt="">
+        </div>
+    </section>
+    <section class="second-section">
+        <div class="second-half-width">
+            <img src="images/male/male-edit2.png" alt="">
+        </div>
+        <div class="second-half-width">
+            <h1>About Myself</h3>
+                <p>I have a little bit knowledge in programming languages such as C, C++, Java etc. I also know how to
+                    work
+                    Adobe Photoshop, MS Word, MS PowerPoint, MS Excel etc.
+                    Now I am an active member in Computer Programming Club. That's it. Thank you.</p><br><br>
+                <a class="link-button" target="_blank"
+                    href="https://www.linkedin.com/in/shariful-islam-kajal-801945189/">Contact me</a>
+        </div>
+    </section>
+    <div class="third-division">
+        <h1>My Recipies</h1>
+        <p><small>The largest online collection of professionally-tested recipes, reliable kitchen tips, and
+                mouthwatering
+                daily food content. Come, search, cook, and share.</small></p>
+    </div>
+    <section class="third-section">
+        <div class="third-recipie-divison">
+            <img src="images/food/Project Cover.jpg" alt="" style="width:100%">
+            <h1>Sweet Potato Salad</h1>
+            <p>Sweet potatoes and potatoes combine to make a different type of salad that will pleasantly surprise you.
+            </p>
+        </div>
+        <div class="third-recipie-divison">
+            <img src="images/food/Project Cover1.jpg" alt="" style="width:100%">
+            <h1>Mediterranean Snow Peas</h1>
+            <p>This takes 5 minutes in a pan. You want to barely cook these as noted to keep the lightly crunchy natural
+                sweetness of this seasonal delicacy.</p>
+        </div>
+        <div class="third-recipie-divison">
+            <img src="images/food/Project Cover third.png" alt="" style="width:100%">
+            <h1>Chilled Sugar Snap Pea Soup</h1>
+            <p>This is an incredibly easy soup to make, beautiful to look at, and most important of all, incredibly
+                delicious.</p>
+        </div>
+
+
+    </section>
+    <section class="fourth-section">
+        <div class="third-recipie-divison">
+            <img src="images/food/Project Cover5.png" alt="" style="width:100%">
+            <h1>Simply Steamed Asparagus</h1>
+            <p>Makes even tough asparagus, tender and tasty! Try using vinaigrette dressing in place of the butter too.
+            </p>
+        </div>
+        <div class="third-recipie-divison">
+            <img src="images/food/Project Cover7.png" alt="" style="width:100%">
+            <h1>Spicy Szechuan Green Beans</h1>
+            <p>I modified this recipe to be less oily. It is almost as good as take-out Chinese green beans. It tastes
+                wonderful with ham and a baked yam.</p>
+        </div>
+        <div class="third-recipie-divison">
+            <img src="images/food/Project Cover8.png" alt="" style="width:100%">
+            <h1>Fresh Broccoli Salad</h1>
+            <p>This is a yummy summer salad that uses an interesting combination of fruits, vegetables and meats. Before
+                you decide you won't like it, try it. </p>
+        </div>
+    </section>
+    <section class="fifth-section">
+        <div class="finally">
+            <h2> <span class="orange-color">FOOD </span> <span class="gray-color"> NETWORK </span></h2>
+            <p><small><small><small>Eat healthy to live healthy. Live healthy to live happy.</small></small></small></p>
         </div>
     </section>
 </body>
